recursion.cons.length.Length.scala.error
Compilation error:
Length:5: error: missing arguments for method length in class Length;
follow this method with `_' if you want to treat it as a partially applied function
  return length + 1
         ^